test_case/rust-lang_rust/101900_1290925322.rs
rust
const fn foo() {}
const fn bar() {
    let x = foo;
    x();
    let y = foo; //~ ERROR: type annotations needed
}
